# bevy_ball_game

./: Cargo.toml  README.md
src/: components.rs  events.rs  game.rs  main.rs  main_menu.rs  resources.rs  systems.rs  unused.rs
src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/: constants.rs  enemy.rs  player.rs  score.rs  star.rs  systems.rs
src/game/enemy/: components.rs  resources.rs  systems.rs
src/game/player/: components.rs  resources.rs  systems.rs
src/game/score/: resources.rs  systems.rs
src/game/star/: resources.rs  systems.rs
src/main_menu/: styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: components.rs  mod.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/star/: mod.rs  resources.rs  systems.rs
src/unused/: systems.rs
unused/: systems.rs
